<resources>
    <string name="app_name">来一碗</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
	<string name="exit_txt">Exit</string>
	<string name="mainTitle_txt">Welcome</string>
	<string name="layoutLeft_title">来一碗</string>
	<string name="total_prie">Total:</string>
	<string name="gathering">Pay:</string>
	<string name="surplus">Change:</string>
	<string name="take_package">Pack</string>
	<string name="add_package">Pack Added</string>
	<string name="lessen_package">Pack Removed</string>
	<string name="ok">OK</string>
	<string name="diancai_name">POINT OF SALES</string>
	<string name="foc">FOC</string>
	<string name="discount">Discount</string>
	<string name="setting">SETTING</string>
	<string name="exitApp">EXIT</string>
	<string name="allcount">Total Expenses</string>
	<string name="message_title">Message Title</string>
	<string name="message_exit">DO YOU WANT TO LOGOUT POS?</string>
	<string name="err_price">ERROR PRICE</string>
	<string name="message_ok">OK</string>
	<string name="message_cancle">CANCEL</string>
	<string name="login_name">Username：</string>
	<string name="login_password">Password：</string>
	<string name="dail_detail">Expenses</string>
	<string name="shop_info">Outlet Name:</string>
	<string name="shop_money">Open Balance</string>
	<string name="login_wait">Loading...</string>
	<string name="write_name">write_name:</string>
	<string name="take_number">Daily Collections</string>
	<string name="cash_register">C:Cash register</string>
	<string name="today_turnover">D:Daily_turnover</string>
	<string name="setting_tanwei_id">Outlet ID:</string>
	<string name="noon_time">Lunch Time</string>
	<string name="noon_turnover">Lunch Sales</string>
	<string name="time">Time</string>
	<string name="total">Total (B+C)</string>
	<string name="tomorrow_money">E:Next Open Balance</string>
	<string name="total_take_num">Total Collection(D-E)</string>
	<string name="send_person">Cashier</string>
	<string name="other">Remarks</string>
	<string name="message_zhifu">Do you want to submit？</string>
	<string name="message_2">Do you want to switch language？</string>
	<string name="open_print">To print receipt?</string>
	<string name="set_title">Setting</string>
	<string name="synchronize">Sync</string>
	<string name="content">Error / All data committed to the Cloud </string>
	<string name="synchronize_btn">Sync</string>
	<string name="synchronize_btn2">Confirm</string>
	<string name="synchronize_btn3">Reset</string>
	<string name="message_login">LOGIN</string>
	<string name="set_txt">Configuration</string>
	<string name="language">Language</string>
	<string name="print_set">PRINT SETTING</string>
	<string name="print_one">Printer IP:</string>
	<string name="print_two">Printer 2: </string>
	<string name="take_price">Discount</string>
	<string name="admin_set">SUPER ADMINISTRATOR SETTING</string>
	
	<string name="synchronization_menu">MENU SYNC</string>
	<string name="synchronization_shop">OUTLET ID</string>
	<string name="synchronization_pay">EXPENSES SYNC</string>
	<string name="price_set">price_set</string>
	<string name="pass_set">Reset</string>
	<string name="user_name">Username</string>
	<string name="daily_pay">CASHIER CLOSING</string>
	<string name="main_food">Main Course</string>
	<string name="vegetable">Dishes</string>
	<string name="delete">Delete</string>
	<string name="selec_not_food">Please select at least one item</string>
	<string name="ceshi">Testing</string>
	<string name="rmb">Dollars</string>
	<string name="take_all_price">Total Collection:</string>

	<string name="message_shop">Do you want to change outlet ID？</string>
	<string name="login_quanxian">Unauthorized Login</string>
	<string name="login_wifi_err">当前没有网络，稍后重试</string>
	<string name="login_succ">Login Granted</string>
	<string name="login_fail">Fail,Please fill correct username and password.</string>
	<string name="login_service_err">Server Exception, please try again later!</string>
	<string name="insufficientpermissions">You are unauthorized to access it</string>
	<string name="toast_submmit_succ">Submit Success</string>
	<string name="toast_submmit_fail">Submit Fail</string>
	<string name="toast_submmit_err">Submit Error</string>
	<string name="toast_setting_succ">Configue Success</string>
	<string name="toast_setting_language_succ">Language configuration success</string>
	<string name="btu_queren">Confirm</string>
	<string name="btn_quxiao">Cancel</string>
	<string name="dialog_set">Sync...</string>
	<string name="money_coin">cos</string>
	<string name="money_piece">pcs</string>
	<string name="dialy_submit_error1">[带回总数] 和 [开店金额] 都不允许为空。</string>
	<string name="dialy_submit_error2">带回总数金额不一致，请重新确认。</string>
	<string name="dialy_submit_error3">收银机不能为负数。</string>
	<string name="no_need_sync">No need update</string>
	<string name="sync_succ">All the data is up-to-date</string>
	<string name="sync_err">Uncommitted data is pending a synchronization to the Cloud. Please check Internet connection before clicking on the button.</string>
	
	<string-array name="food_name">
        <item>八宝酿豆腐</item>
        <item>特制酿豆腐</item>
        <item>全家福大碗汤</item>
        <item>虾棒墨鱼汤</item>
        <item>特制辣酱</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>汤</item>
        <item>珍珠米</item>
        <item>粿条仔</item>
        <item>细米粉</item>
    </string-array>
        <string-array name="food_id">

        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string-array name="food_dayin_code">

        <item>1a</item>
        <item>1b</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="food_type">
        <item>DISH</item>
        <item>DISH</item>
        <item>DISH</item>
        <item>DISH</item>
        <item>DISH</item>
        <item>DISH</item>
        <item>DISH</item>
        <item>DISH</item>
        <item>STAPLE</item>
        <item>STAPLE</item>
        <item>STAPLE</item>
    </string-array>
    <string-array name="food_price">
        <item>3.50</item>
        <item>3.50</item>
        <item>10.00</item>
        <item>7.00</item>
        <item>7.00</item>
        <item>4.5</item>
        <item>5.0</item>
        <item>1.00</item>
        <item>1.00</item>
        <item>1.00</item>
        <item>1.00</item>

    </string-array>
	<string-array name="pay_list">
        <item>Vegtable </item>
        <item>Takeaway Materials</item>
        <item>Drink/Meal</item>
        <item>Gas</item>
        <item>Loan</item>
        <item>Equipment/Utensil</item>
        <item>General Hardware</item>
        <item>Others</item>
    </string-array>
    
    <string-array name="take_number">
        <item>0.05</item>
        <item>0.10</item>
        <item>0.20 </item>
        <item>0.50</item>
        <item>1.00</item>
        <item>2.00</item>
        <item>5.00</item>
        <item>10.00</item> 
        <item>50.00</item>
        <item>100.00</item>
    </string-array>
</resources>


