<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list" >

    <TextView
        android:id="@+id/popu_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/setting"
        android:textSize="16sp" />
	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/daily_pay"
        android:layout_below="@+id/popu_setting"
        android:id="@+id/popu_daily"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/popu_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/popu_daily"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dip"
        android:layout_marginTop="10dip"
        android:gravity="center"
        android:text="@string/exitApp"
        android:textSize="16sp" />


</RelativeLayout>