<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_top"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingTop="5dip"
    android:paddingBottom="5dip"
    android:background="#D15C2A" >

        <ImageView
            android:id="@+id/menu_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:layout_marginLeft="20dip"
            android:layout_centerVertical="true"
            android:src="@drawable/menu_btn" />

        <TextView
            android:id="@+id/food_menu_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="30dip"
            android:layout_toRightOf="@+id/menu_btn"
            android:text="@string/layoutLeft_title"
            android:textColor="#FFFFFF"
            android:textSize="21sp" />
        
                 

        <ImageView
            android:id="@+id/line"
            android:layout_width="2dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dip"
            android:layout_toRightOf="@+id/food_menu_txt"
            android:background="#00000000"
            android:scaleType="centerInside"
            android:src="@drawable/line"
             />

        <ImageView
            android:id="@+id/login_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/line"
            android:background="#00000000"
            android:scaleType="fitXY"
            android:src="@drawable/login_bg" />

        <TextView
            android:id="@+id/login_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="5dip"
            android:layout_toRightOf="@+id/login_image"
            android:text="@string/mainTitle_txt"
            android:textColor="#000000" />
        
         <TextView
                	android:layout_toRightOf="@+id/login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dip"
                    android:drawablePadding="5dip"
                    android:drawableRight="@drawable/line"
                     android:layout_centerVertical="true"
                    android:singleLine="true"
                    android:id="@+id/letout_name_tv"
                    android:text="@string/shop_info"
                    android:textColor="#FFFFFF"
                    android:textSize="21sp"
                    android:textStyle="bold" /> 
            <TextView
            android:id="@+id/shop_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:layout_toRightOf="@+id/letout_name_tv"
            android:text="@string/layoutLeft_title"
            android:textColor="#FFFFFF"
            android:textSize="21sp" />  

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="30dip" >

            <RelativeLayout
                android:id="@+id/layout_exit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 >

                <ImageView
                    android:id="@+id/exit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dip"
                    android:background="#00000000"
                    android:scaleType="centerInside"
                    android:src="@drawable/exit_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dip"
                    android:layout_toRightOf="@+id/exit_btn"
                    android:text="@string/exit_txt"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/wifi_iamge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15dip"
                android:layout_toRightOf="@+id/layout_exit"
                android:background="#00000000"
                android:scaleType="fitXY" />
        </RelativeLayout>
    </RelativeLayout>